# vigil

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: config.rs  detect.rs  doctor.rs  hunt.rs  ir.rs  mod.rs  onboard.rs  playbook.rs  source.rs  vuln.rs
src/config/: mod.rs
